--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>
         Krishna Reddy 08/18/22
+        </title>
     </head>
     <body>
        Hello world
