--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-        Krishna Reddy 08/18/22
+        Groupc Dashboard
         </title>
     </head>
     <body>
